--- a/todo.txt
+++ b/todo.txt
@@ -6,18 +6,18 @@ Card object
 - suits -- DONE
 
 Deck object
-- default order 
-    - spades, hearts, diamonds, clubs (A-K)
-- shuffle
-    - pseudo-random order
-- draw
-    - maintain order of deck
+- default order -- DONE
+    - spades, hearts, diamonds, clubs (A-K) -- DONE
+- shuffle -- DONE
+    - pseudo-random order -- DONE
+- draw -- DONE
+    - maintain order of deck -- DONE
 
 Game flow
 - game state
-    - handle for game state
-    - 2D array for current card stacks 
-        - 7x13 array - 7 for stack slots, 13 for max stack size
+    - handle for game state -- DONE
+    - 2D array for current card stacks -- DONE
+        - 7x13 array - 7 for stack slots, 13 for max stack size -- DONE
 - user input
     - commands
     - add (num 1-7) - put current card on specified stack
